# ktmac

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
Public/ktmac/: KakaoStateManager.hh  ProcessWatcher.hh  ProcessWatcherMessage.hh  ProcessWatcherSocket.hh  WindowHook.hh  WmiEventSink.hh
Public/ktmac/gui/: App.hh  Handler.hh  ResourceUtils.hh
Resources/ktmac/gui/: Resources.h  Resources.rc  View.html
Source/: KakaoStateManager.cc  Main.cc  ProcessHook.cc  ProcessHookTest.cc  ProcessWatcher.cc  ProcessWatcherSocket.cc  WindowHook.cc  WmiEventSink.cc
Source/gui/: App.cc  Handler.cc  Main.cc  ResourceUtils.cc
Tests/: KtmacProcessHookTest.cc  KtmacTest.cc
